# multiagent-news-insight

./: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
agents/crawler_agent/: __init__.py  crawler_agent.py  crawler_server.py
agents/helpers/: create_a2a_server.py
agents/insight_agent/: __init__.py  insight_agent.py  insight_server.py
agents/orchestrator_agent/: orchestrator_agent.py  orchestrator_server.py
agents/parser_agent/: __init__.py  parser_agent.py  parser_server.py
agents/sentiment_agent/: __init__.py  sentiment_agent.py  sentiment_server.py
common/: __init__.py  logger.py  prompts.py  schemas.py  settings.py  telemetry.py
tools/: __init__.py  dedupe_tool.py
